<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Broodkruimels</string>
	<string name="action_settings">Instellingen</string>
	<string name="dialog_category_title">Kies categorieën</string>
	<string name="action_select_category">Categorieën</string>
	<string name="action_share">Delen</string>
	<string name="txt_watch_video">Bekijk video</string>
	<string name="txt_try_again_nointernet">Geen internetverbinding</string>
	<string name="txt_try_again_nodownload">Gegevens downloaden niet gelukt</string>
	<string name="btn_try_again">Opnieuw proberen</string>
	<string name="url_data">https://waywayway.nl/bk/?</string>
	<string name="json_items_list_root_element">data</string>
	<string name="json_categories_list_root_element">categories</string>
	<string name="pref_notify">Meldingen</string>
	<string name="pref_notify_summ">Dagelijkse melding op ingestelde tijd</string>
	<string name="pref_notify_time">Tijdstip</string>
	<string name="pref_notify_time_summ">Tijdstip van de dagelijkse melding</string>
	<string name="pref_notify_categories">Categorieën</string>
	<string name="pref_notify_categories_summ">Alleen melding voor gekozen categorieën</string>
	<string name="pref_notify_time_on">Aan</string>
	<string name="pref_notify_time_off">Uit</string>
	<string name="notification_title">Broodkruimels</string>
	<string name="notification_text">Bekijk de dagelijkse broodkruimel</string>
</resources>
