<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<android.support.v7.preference.SwitchPreferenceCompat
		android:key="pref_notify"
        android:title="@string/pref_notify"
        android:summary="@string/pref_notify_summ"
        android:defaultValue="false" />
	
	<android.support.v7.preference.Preference
		android:dependency="pref_notify"
		android:key="pref_notify_time"
        android:title="@string/pref_notify_time"
        android:summary="@string/pref_notify_time_summ"
		android:defaultValue="390" />
	
	<android.support.v7.preference.Preference
		android:dependency="pref_notify"
		android:key="pref_notify_categories"
        android:title="@string/pref_notify_categories"
        android:summary="@string/pref_notify_categories_summ"
		android:defaultValue="" />
	
</android.support.v7.preference.PreferenceScreen>
